--- a/comunidad.html
+++ b/comunidad.html
@@ -11,19 +11,19 @@
 <div class="relative flex size-full min-h-screen flex-col group/design-root overflow-x-hidden">
 <div class="layout-container flex h-full grow flex-col">
 <header class="flex items-center justify-between whitespace-nowrap border-b border-solid border-[var(--secondary-color)] px-6 md:px-10 py-4">
-<div class="flex items-center gap-3 text-[var(--text-primary)]">
+<a href="index.html" class="flex items-center gap-3 text-[var(--text-primary)]">
 <div class="size-5 md:size-6">
 <svg fill="currentColor" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
 <path d="M4 42.4379C4 42.4379 14.0962 36.0744 24 41.1692C35.0664 46.8624 44 42.2078 44 42.2078L44 7.01134C44 7.01134 35.068 11.6577 24.0031 5.96913C14.0971 0.876274 4 7.27094 4 7.27094L4 42.4379Z"></path>
 </svg>
 </div>
 <h2 class="text-[var(--text-primary)] text-xl md:text-2xl font-bold leading-tight tracking-[-0.015em]">Evergreen Threads</h2>
-</div>
+</a>
 <nav class="hidden md:flex flex-1 justify-end items-center gap-6 lg:gap-8">
-<a class="text-[var(--text-primary)] hover:text-[var(--primary-color)] text-sm font-medium leading-normal" href="#">Shop</a>
-<a class="text-[var(--text-primary)] hover:text-[var(--primary-color)] text-sm font-medium leading-normal" href="#">New Arrivals</a>
-<a class="text-[var(--text-primary)] hover:text-[var(--primary-color)] text-sm font-medium leading-normal" href="#">Our Story</a>
-<a class="text-[var(--primary-color)] text-sm font-bold leading-normal" href="#">Community</a>
+<a class="text-[var(--text-primary)] hover:text-[var(--primary-color)] text-sm font-medium leading-normal" href="index.html">Shop</a>
+<a class="text-[var(--text-primary)] hover:text-[var(--primary-color)] text-sm font-medium leading-normal" href="index.html">Nueva Coleccion</a>
+<a class="text-[var(--text-primary)] hover:text-[var(--primary-color)] text-sm font-medium leading-normal" href="nosotros.html">Nuestra historia</a>
+<a class="text-[var(--primary-color)] text-sm font-bold leading-normal" href="comunidad.html">Community</a>
 </nav>
 <div class="flex items-center gap-2 ml-4 md:ml-0">
 <button class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-10 w-10 bg-[var(--secondary-color)] text-[var(--text-primary)] hover:bg-opacity-80 transition-colors">
