--- a/index.html
+++ b/index.html
@@ -12,21 +12,23 @@
 <div class="relative flex size-full min-h-screen flex-col group/design-root overflow-x-hidden" style='font-family: Epilogue, "Noto Sans", sans-serif;'>
 <div class="layout-container flex h-full grow flex-col">
 <header class="flex items-center justify-between whitespace-nowrap border-b border-solid border-[var(--brand-border)] bg-white px-6 md:px-10 py-4 shadow-sm">
-<div class="flex items-center gap-3 text-[var(--brand-text-primary)]">
+<a href="index.html" class="flex items-center gap-3 text-[var(--brand-text-primary)]">
 <div class="size-6 text-[var(--brand-primary)]">
 <svg fill="none" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
 <path d="M24 4C25.7818 14.2173 33.7827 22.2182 44 24C33.7827 25.7818 25.7818 33.7827 24 44C22.2182 33.7827 14.2173 25.7818 4 24C14.2173 22.2182 22.2182 14.2173 24 4Z" fill="currentColor"></path>
 </svg>
 </div>
 <h2 class="text-[var(--brand-text-primary)] text-xl font-bold tracking-tight">Bioplanet</h2>
-</div>
+</a>
 <nav class="hidden md:flex items-center gap-6">
-<a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm font-medium" href="#">New Arrivals</a>
-<a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm font-medium" href="#">Kid´s</a>
-<a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm font-medium" href="#">Bag´s</a>
-<a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm font-medium" href="#">Accessories</a>
-<a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm font-medium" href="#">Our Story</a>
-<a class="text-[var(--brand-primary)] text-sm font-bold" href="#">Sale</a>
+<a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm font-medium" href="index.html">Nueva Coleccion</a>
+<a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm font-medium" href="index.html">Kid´s</a>
+<a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm font-medium" href="index.html">Bag´s</a>
+<a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm font-medium" href="index.html">Fashion</a>
+<a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm font-medium" href="nosotros.html">Nuestra historia</a>
+<a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm font-medium" href="contacto.html">Contacto</a>
+<a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm font-medium" href="comunidad.html">Comunidad</a>
+<a class="text-[var(--brand-primary)] text-sm font-bold" href="index.html">Sale</a>
 </nav>
 <div class="flex items-center gap-2">
 <button aria-label="Search" class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-10 w-10 hover:bg-[var(--brand-background-light)] text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] transition-colors">
