Versión 1.0: Sitio Bioplanet funcional con 4 páginas, estilos unificados y responsive.

--- a/comunidad.html
+++ b/comunidad.html
@@ -133,11 +133,11 @@
 <div>
 <h3 class="text-[var(--text-primary)] text-lg font-semibold mb-4">Quick Links</h3>
 <ul class="space-y-2">
-<li><a class="text-[var(--text-secondary)] hover:text-[var(--primary-color)] text-sm" href="#">Shop</a></li>
+<li><a class="text-[var(--text-secondary)] hover:text-[var(--primary-color)] text-sm" href="index.html">Shop</a></li>
 <li><a class="text-[var(--text-secondary)] hover:text-[var(--primary-color)] text-sm" href="#">New Arrivals</a></li>
-<li><a class="text-[var(--text-secondary)] hover:text-[var(--primary-color)] text-sm" href="#">Our Story</a></li>
-<li><a class="text-[var(--text-secondary)] hover:text-[var(--primary-color)] text-sm" href="#">Community</a></li>
-<li><a class="text-[var(--text-secondary)] hover:text-[var(--primary-color)] text-sm" href="#">Contact Us</a></li>
+<li><a class="text-[var(--text-secondary)] hover:text-[var(--primary-color)] text-sm" href="nosotros.html">Our Story</a></li>
+<li><a class="text-[var(--text-secondary)] hover:text-[var(--primary-color)] text-sm" href="comunidad.html">Community</a></li>
+<li><a class="text-[var(--text-secondary)] hover:text-[var(--primary-color)] text-sm" href="contacto.html">Contact Us</a></li>
 </ul>
 </div>
 <div>
