--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 </a>
 <nav class="hidden md:flex items-center gap-6">
 <a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm font-medium" href="index.html">Nueva Coleccion</a>
-<a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm font-medium" href="index.html">Kid´s</a>
-<a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm font-medium" href="index.html">Bag´s</a>
-<a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm font-medium" href="index.html">Fashion</a>
+<a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm font-medium" href="index.html#kids">Kid´s</a>
+<a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm font-medium" href="index.html#bags">Bag´s</a>
+<a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm font-medium" href="index.html#fashion">Fashion</a>
 <a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm font-medium" href="nosotros.html">Nuestra historia</a>
 <a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm font-medium" href="contacto.html">Contacto</a>
 <a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm font-medium" href="comunidad.html">Comunidad</a>
@@ -57,12 +57,12 @@
                     Discover consciously crafted clothing that’s kind to the planet and its people. Sustainable style, ethically made.
                   </h2>
 </div>
-<button class="btn-primary">
-  <span>Shop Collection</span>
-</button>
+<a href="#productos" class="btn-primary">
+  <span>Comprar Coleccion</span>
+</a>
 </div>
 </section>
-<section class="py-12 md:py-20 px-4 sm:px-6 lg:px-8 bg-white">
+<section id="productos" class="py-12 md:py-20 px-4 sm:px-6 lg:px-8 bg-white">
 <h2 class="text-[var(--brand-text-primary)] text-3xl font-bold leading-tight tracking-tight text-center mb-10 md:mb-16">Featured Products</h2>
 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
 <div class="flex flex-col gap-4 rounded-lg overflow-hidden group">
@@ -87,6 +87,99 @@
 <h3 class="text-[var(--brand-text-primary)] text-lg font-semibold leading-normal">Earth-Tone Utility Pants</h3>
 <p class="text-[var(--brand-text-secondary)] text-sm font-normal leading-normal">Durable Hemp Canvas</p>
 <p class="text-[var(--brand-text-primary)] text-md font-bold mt-1">$110</p>
+</div>
+</div>
+</div>
+</section>
+
+<!-- Kids Section -->
+<section class="py-12 md:py-20 px-4 sm:px-6 lg:px-8 bg-white">
+<h2 id="kids" class="text-[var(--brand-text-primary)] text-3xl font-bold leading-tight tracking-tight text-center mb-10 md:mb-16">Para los Pequeños (Kids)</h2>
+<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+<div class="flex flex-col gap-4 rounded-lg overflow-hidden group">
+<div class="w-full bg-center bg-no-repeat aspect-[3/4] bg-cover rounded-lg transition-transform duration-300 ease-in-out group-hover:scale-105" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBT7tM9pJEgX1fnYIH5LXbI_dowBsjaTZYyzvZk-p2g_46tvnxeGFgXacM_accuTAFPmp3BBjoQ1MxOUlzT_SqPLD92ple2YJSKHtoG3T5rZ47eHEFsNGRK9YqwsdTcOK7E6fLQoWrsEKyA9pJeXIPWOmaEgq7lVjdwZAgr23Cgi2B2n5q6f8TQvee6ir08zRd7E2Ed2Qf1iY_MdiC7iuK-vWnyc12u8_7yKnW7H-ZuA7nEX0ioi-RxELcw9vZnTqc0LYQ5VP1faVvd");'></div>
+<div class="text-center">
+<h3 class="text-[var(--brand-text-primary)] text-lg font-semibold leading-normal">Camiseta de Algodón Orgánico</h3>
+<p class="text-[var(--brand-text-secondary)] text-sm font-normal leading-normal">100% Algodón Orgánico</p>
+<p class="text-[var(--brand-text-primary)] text-md font-bold mt-1">$25</p>
+</div>
+</div>
+<div class="flex flex-col gap-4 rounded-lg overflow-hidden group">
+<div class="w-full bg-center bg-no-repeat aspect-[3/4] bg-cover rounded-lg transition-transform duration-300 ease-in-out group-hover:scale-105" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCXHehJz5hmCfdq30ugCCKFbHDocVcPa-AiB4Y3CTuCKlrBwzT2w3qiYasLw930EW6eFkor9tPlX3bGUHLHy5_i0S3r025gDo1NtsjnyEDl6LecZCtSERBJZTgUXrA0zC1lE8-Tp6Ly8cOa-l5ZZ1g0WxkZN6ce884mJxHY6tIYtmEsoqLRe94eSkj8KqgVknlNtd63JOMA7mf3OW9hTjLSYksnDO0E1GLSQ6qYIcW9QXKv9HgFuem5q7hfINfrRa_FoKwCBKL7jDg0");'></div>
+<div class="text-center">
+<h3 class="text-[var(--brand-text-primary)] text-lg font-semibold leading-normal">Pantalones de Lino Suave</h3>
+<p class="text-[var(--brand-text-secondary)] text-sm font-normal leading-normal">Lino Natural, Cómodos</p>
+<p class="text-[var(--brand-text-primary)] text-md font-bold mt-1">$32</p>
+</div>
+</div>
+<div class="flex flex-col gap-4 rounded-lg overflow-hidden group">
+<div class="w-full bg-center bg-no-repeat aspect-[3/4] bg-cover rounded-lg transition-transform duration-300 ease-in-out group-hover:scale-105" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBJDbEqjJ1i7PjwPPTcl_68Y0L0aHm1S2_8NmDAoSHlfggJeaY2JaB1P-OalVMMmDzQ7_OyVJ1h24VtyWPEJBc21BboUkAGDCMY57zGLUT7M9fEMztCZh-vk3Rw6fH5VdgbBbKLxkHmMp6GgQ7Jw-xv5vL_zUpMHF_MGFtBw-h4T2z1E0LhsSfJQ4KH4ebhQyJbbrQ5aucgY5i4Gap6HrL2NecfSAzT3xKivuLhIK6dHQVA6XLwBH4hl16GO94E5o0vijuoxYFw4gR5");'></div>
+<div class="text-center">
+<h3 class="text-[var(--brand-text-primary)] text-lg font-semibold leading-normal">Vestido de Verano</h3>
+<p class="text-[var(--brand-text-secondary)] text-sm font-normal leading-normal">Fresco y Colorido</p>
+<p class="text-[var(--brand-text-primary)] text-md font-bold mt-1">$29</p>
+</div>
+</div>
+</div>
+</section>
+
+<!-- Fashion Section -->
+<section class="py-12 md:py-20 px-4 sm:px-6 lg:px-8 bg-white">
+<h2 id="fashion" class="text-[var(--brand-text-primary)] text-3xl font-bold leading-tight tracking-tight text-center mb-10 md:mb-16">Moda Consciente (Fashion)</h2>
+<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+<div class="flex flex-col gap-4 rounded-lg overflow-hidden group">
+<div class="w-full bg-center bg-no-repeat aspect-[3/4] bg-cover rounded-lg transition-transform duration-300 ease-in-out group-hover:scale-105" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBT7tM9pJEgX1fnYIH5LXbI_dowBsjaTZYyzvZk-p2g_46tvnxeGFgXacM_accuTAFPmp3BBjoQ1MxOUlzT_SqPLD92ple2YJSKHtoG3T5rZ47eHEFsNGRK9YqwsdTcOK7E6fLQoWrsEKyA9pJeXIPWOmaEgq7lVjdwZAgr23Cgi2B2n5q6f8TQvee6ir08zRd7E2Ed2Qf1iY_MdiC7iuK-vWnyc12u8_7yKnW7H-ZuA7nEX0ioi-RxELcw9vZnTqc0LYQ5VP1faVvd");'></div>
+<div class="text-center">
+<h3 class="text-[var(--brand-text-primary)] text-lg font-semibold leading-normal">Blusa Campesina de Algodón</h3>
+<p class="text-[var(--brand-text-secondary)] text-sm font-normal leading-normal">Algodón Orgánico</p>
+<p class="text-[var(--brand-text-primary)] text-md font-bold mt-1">$45</p>
+</div>
+</div>
+<div class="flex flex-col gap-4 rounded-lg overflow-hidden group">
+<div class="w-full bg-center bg-no-repeat aspect-[3/4] bg-cover rounded-lg transition-transform duration-300 ease-in-out group-hover:scale-105" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCXHehJz5hmCfdq30ugCCKFbHDocVcPa-AiB4Y3CTuCKlrBwzT2w3qiYasLw930EW6eFkor9tPlX3bGUHLHy5_i0S3r025gDo1NtsjnyEDl6LecZCtSERBJZTgUXrA0zC1lE8-Tp6Ly8cOa-l5ZZ1g0WxkZN6ce884mJxHY6tIYtmEsoqLRe94eSkj8KqgVknlNtd63JOMA7mf3OW9hTjLSYksnDO0E1GLSQ6qYIcW9QXKv9HgFuem5q7hfINfrRa_FoKwCBKL7jDg0");'></div>
+<div class="text-center">
+<h3 class="text-[var(--brand-text-primary)] text-lg font-semibold leading-normal">Falda Larga Estampada</h3>
+<p class="text-[var(--brand-text-secondary)] text-sm font-normal leading-normal">Estampado Floral</p>
+<p class="text-[var(--brand-text-primary)] text-md font-bold mt-1">$60</p>
+</div>
+</div>
+<div class="flex flex-col gap-4 rounded-lg overflow-hidden group">
+<div class="w-full bg-center bg-no-repeat aspect-[3/4] bg-cover rounded-lg transition-transform duration-300 ease-in-out group-hover:scale-105" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBJDbEqjJ1i7PjwPPTcl_68Y0L0aHm1S2_8NmDAoSHlfggJeaY2JaB1P-OalVMMmDzQ7_OyVJ1h24VtyWPEJBc21BboUkAGDCMY57zGLUT7M9fEMztCZh-vk3Rw6fH5VdgbBbKLxkHmMp6GgQ7Jw-xv5vL_zUpMHF_MGFtBw-h4T2z1E0LhsSfJQ4KH4ebhQyJbbrQ5aucgY5i4Gap6HrL2NecfSAzT3xKivuLhIK6dHQVA6XLwBH4hl16GO94E5o0vijuoxYFw4gR5");'></div>
+<div class="text-center">
+<h3 class="text-[var(--brand-text-primary)] text-lg font-semibold leading-normal">Chaqueta Ligera de Tencel</h3>
+<p class="text-[var(--brand-text-secondary)] text-sm font-normal leading-normal">Tencel Ecológico</p>
+<p class="text-[var(--brand-text-primary)] text-md font-bold mt-1">$85</p>
+</div>
+</div>
+</div>
+</section>
+
+<!-- Bags Section -->
+<section class="py-12 md:py-20 px-4 sm:px-6 lg:px-8 bg-white">
+<h2 id="bags" class="text-[var(--brand-text-primary)] text-3xl font-bold leading-tight tracking-tight text-center mb-10 md:mb-16">Bolsos y Accesorios (Bags)</h2>
+<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+<div class="flex flex-col gap-4 rounded-lg overflow-hidden group">
+<div class="w-full bg-center bg-no-repeat aspect-[3/4] bg-cover rounded-lg transition-transform duration-300 ease-in-out group-hover:scale-105" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBT7tM9pJEgX1fnYIH5LXbI_dowBsjaTZYyzvZk-p2g_46tvnxeGFgXacM_accuTAFPmp3BBjoQ1MxOUlzT_SqPLD92ple2YJSKHtoG3T5rZ47eHEFsNGRK9YqwsdTcOK7E6fLQoWrsEKyA9pJeXIPWOmaEgq7lVjdwZAgr23Cgi2B2n5q6f8TQvee6ir08zRd7E2Ed2Qf1iY_MdiC7iuK-vWnyc12u8_7yKnW7H-ZuA7nEX0ioi-RxELcw9vZnTqc0LYQ5VP1faVvd");'></div>
+<div class="text-center">
+<h3 class="text-[var(--brand-text-primary)] text-lg font-semibold leading-normal">Tote Bag de Lona Reciclada</h3>
+<p class="text-[var(--brand-text-secondary)] text-sm font-normal leading-normal">Lona Reciclada</p>
+<p class="text-[var(--brand-text-primary)] text-md font-bold mt-1">$38</p>
+</div>
+</div>
+<div class="flex flex-col gap-4 rounded-lg overflow-hidden group">
+<div class="w-full bg-center bg-no-repeat aspect-[3/4] bg-cover rounded-lg transition-transform duration-300 ease-in-out group-hover:scale-105" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCXHehJz5hmCfdq30ugCCKFbHDocVcPa-AiB4Y3CTuCKlrBwzT2w3qiYasLw930EW6eFkor9tPlX3bGUHLHy5_i0S3r025gDo1NtsjnyEDl6LecZCtSERBJZTgUXrA0zC1lE8-Tp6Ly8cOa-l5ZZ1g0WxkZN6ce884mJxHY6tIYtmEsoqLRe94eSkj8KqgVknlNtd63JOMA7mf3OW9hTjLSYksnDO0E1GLSQ6qYIcW9QXKv9HgFuem5q7hfINfrRa_FoKwCBKL7jDg0");'></div>
+<div class="text-center">
+<h3 class="text-[var(--brand-text-primary)] text-lg font-semibold leading-normal">Morral de Yute Artesanal</h3>
+<p class="text-[var(--brand-text-secondary)] text-sm font-normal leading-normal">Hecho a Mano</p>
+<p class="text-[var(--brand-text-primary)] text-md font-bold mt-1">$55</p>
+</div>
+</div>
+<div class="flex flex-col gap-4 rounded-lg overflow-hidden group">
+<div class="w-full bg-center bg-no-repeat aspect-[3/4] bg-cover rounded-lg transition-transform duration-300 ease-in-out group-hover:scale-105" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBJDbEqjJ1i7PjwPPTcl_68Y0L0aHm1S2_8NmDAoSHlfggJeaY2JaB1P-OalVMMmDzQ7_OyVJ1h24VtyWPEJBc21BboUkAGDCMY57zGLUT7M9fEMztCZh-vk3Rw6fH5VdgbBbKLxkHmMp6GgQ7Jw-xv5vL_zUpMHF_MGFtBw-h4T2z1E0LhsSfJQ4KH4ebhQyJbbrQ5aucgY5i4Gap6HrL2NecfSAzT3xKivuLhIK6dHQVA6XLwBH4hl16GO94E5o0vijuoxYFw4gR5");'></div>
+<div class="text-center">
+<h3 class="text-[var(--brand-text-primary)] text-lg font-semibold leading-normal">Canguro de Fibra Natural</h3>
+<p class="text-[var(--brand-text-secondary)] text-sm font-normal leading-normal">Fibra Natural</p>
+<p class="text-[var(--brand-text-primary)] text-md font-bold mt-1">$30</p>
 </div>
 </div>
 </div>
@@ -152,8 +245,9 @@
 <div>
 <h3 class="text-[var(--brand-text-primary)] text-md font-semibold mb-3">Quick Links</h3>
 <ul class="space-y-2">
-<li><a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm" href="#">About Us</a></li>
-<li><a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm" href="#">Contact</a></li>
+<li><a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm" href="nosotros.html">Our Story</a></li>
+<li><a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm" href="contacto.html">Contact Us</a></li>
+<li><a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm" href="comunidad.html">Community</a></li>
 <li><a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm" href="#">FAQ</a></li>
 <li><a class="text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] text-sm" href="#">Shipping &amp; Returns</a></li>
 </ul>
