--- a/nosotros.html
+++ b/nosotros.html
@@ -25,7 +25,7 @@
 <a class="nav-link text-sm font-medium leading-normal" href="index.html">Shop</a>
 <a class="nav-link text-sm font-medium leading-normal" href="index.html">New Arrivals</a>
 <a class="nav-link text-sm font-medium leading-normal text-[var(--brand-primary)]" href="nosotros.html">Our Story</a>
-<a class="nav-link text-sm font-medium leading-normal" href="index.html">Sustainability</a>
+<a class="nav-link text-sm font-medium leading-normal" href="index.html#fashion">Fashion</a>
 <a class="nav-link text-sm font-medium leading-normal" href="contacto.html">Contact</a>
 </div>
 </nav>
@@ -93,8 +93,9 @@
 <div class="layout-container">
 <div class="flex flex-col gap-8 px-5 py-12 text-center @container border-t border-[var(--border-light)]">
 <nav class="flex flex-wrap items-center justify-center gap-x-8 gap-y-4 @[480px]:flex-row @[480px]:justify-around">
-<a class="footer-link text-sm font-medium leading-normal min-w-32" href="#">About Us</a>
-<a class="footer-link text-sm font-medium leading-normal min-w-32" href="#">Contact</a>
+<a class="footer-link text-sm font-medium leading-normal min-w-32" href="nosotros.html">Our Story</a>
+<a class="footer-link text-sm font-medium leading-normal min-w-32" href="contacto.html">Contact Us</a>
+<a class="footer-link text-sm font-medium leading-normal min-w-32" href="comunidad.html">Community</a>
 <a class="footer-link text-sm font-medium leading-normal min-w-32" href="#">FAQ</a>
 <a class="footer-link text-sm font-medium leading-normal min-w-32" href="#">Shipping &amp; Returns</a>
 <a class="footer-link text-sm font-medium leading-normal min-w-32" href="#">Privacy Policy</a>
