--- a/contacto.html
+++ b/contacto.html
@@ -22,8 +22,9 @@
 </a>
 <nav class="hidden lg:flex flex-1 justify-center items-center gap-8">
 <a class="text-[var(--brand-text-secondary)] text-sm font-medium leading-normal header-link" href="index.html">Shop</a>
-<a class="text-[var(--brand-text-secondary)] text-sm font-medium leading-normal header-link" href="index.html">About</a>
-<a class="text-[var(--brand-text-secondary)] text-sm font-medium leading-normal header-link" href="index.html">Sustainability</a>
+<a class="text-[var(--brand-text-secondary)] text-sm font-medium leading-normal header-link" href="index.html#kids">Kid´s</a>
+<a class="text-[var(--brand-text-secondary)] text-sm font-medium leading-normal header-link" href="index.html#bags">Bag´s</a>
+<a class="text-[var(--brand-text-secondary)] text-sm font-medium leading-normal header-link" href="index.html#fashion">Fashion</a>
 <a class="text-[var(--brand-primary)] text-sm font-bold leading-normal" href="contacto.html">Contact</a>
 </nav>
 <div class="flex items-center gap-3">
@@ -121,8 +122,8 @@
 <div>
 <h4 class="text-md font-medium text-[var(--brand-text-primary)] mb-3">Quick Links</h4>
 <ul class="space-y-2">
-<li><a class="text-sm text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] transition-colors" href="#">Terms of Service</a></li>
-<li><a class="text-sm text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] transition-colors" href="#">Privacy Policy</a></li>
+<li><a class="text-sm text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] transition-colors" href="nosotros.html">Our Story</a></li>
+<li><a class="text-sm text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] transition-colors" href="contacto.html">Contact Us</a></li>
 <li><a class="text-sm text-[var(--brand-text-secondary)] hover:text-[var(--brand-primary)] transition-colors" href="#">Shipping &amp; Returns</a></li>
 </ul>
 </div>
